--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
-Package: pkgDemo
+Package: pkgGrpt
 Type: Package
-Title: What the Package Does (Title Case) 
-    (65 character (one line)description)
+Title: DC_Trees 
+    Combines data on the trees and people of Washington D.C. to explore the relationships between population and tree density.
 Version: 0.1.0
 Authors@R: c(
     person("Amrita", "Sawhney", email = "amsawhney@reed.edu", 
@@ -16,5 +16,5 @@ LazyData: true
 Depends:
     R (>= 2.10)
 RoxygenNote: 7.1.1
-Imports: 
+Imports: none or just tidyverse?
     (Insert packages with commas between)
