--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: pkgGrpt
+Package: DC_Tree_Pop_sf
 Type: Package
-Title: DC_Tree_Pop_sf - Combines data on the trees and people of Washington D.C. to explore the relationships between population and tree density.
+Title: DC_Tree_Pop_sf
 Version: 0.1.0
 Authors@R: c(
     person("Amrita", "Sawhney", email = "amsawhney@reed.edu", 
@@ -12,7 +12,7 @@ Description: DC_Tree_Pop combines data from the U.S. Census Bureau and DC GIS to
 License: CC0
 Encoding: UTF-8
 LazyData: true
-Depends:
+Depends: 
     R (>= 2.10)
 RoxygenNote: 7.1.1
 Suggests: 
