--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
-Package: DC_Tree_Pop_sf
+Package: DCTreePops
 Type: Package
-Title: DC_Tree_Pop_sf
+Title: Amounts of trees and people in DC, divided by Census tract areas
 Version: 0.1.0
 Date: 2021-03-01
 Authors@R: c(
     person("Amrita", "Sawhney", email = "amsawhney@reed.edu", 
     role = c("aut","cre")),
     person("Maxwell", "VanLandschoot", email = "maxvanlan@reed.edu", 
-    role = c("aut", "cre"))
+    role = c("aut"))
     )
 Description: DC_Tree_Pop combines data from the U.S. Census Bureau and DC GIS to explore how population and tree density relate. The data are composed of 179 unique, spatially defined census-tracts and include additional information on an area's GeoID, land area composition, and size. This data would be useful for anyone interested in a more macro-level analysis of tree population or for someone interested in investigating the effects of urban expansion and the environment in Washington D.C.  
 License: CC0
